# TwoPlusTwoHandEvaluator

./: .clang-format  .gitignore  CMakeLists.txt  generator.cpp  lookup_tables.hpp  pokerlib.cpp  pokerlib.hpp
test/: .gitignore  CMakeLists.txt  test.cpp
